<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/sort_movies"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/sort_by_popularity"
                android:title="@string/sort_popularity" />
            <item android:id="@+id/sort_by_top"
                android:title="@string/sort_top_rated" />
            <item android:id="@+id/sort_by_upcoming"
                android:title="@string/sort_by_upcoming" />
        </menu>
    </item>

    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="always"/>

</menu>